# onnx-server

./: .env  Cargo.toml  Dockerfile  fashion_mnist_simple_tf_api.onnx  readme.md
src/: main.rs
src/neuralnetwork/: mod.rs  model.rs  routes.rs  services.rs
src/utils/: utils.rs
