[package]
name = "onnx-server"
version = "0.1.0"
authors = ["wasin.pipattungsakul <wasin.pas@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
dotenv = "0.11"
log = "0.4"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
# chrono = { version = "0.4", features = ["serde"] }
onnxruntime = "0.0.11"
image = "0.23.14"
lazy_static = "1.4"
